# desub

./: .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  TODO.md  rustfmt.toml  versions.txt
.github/: dependabot.yml
.github/workflows/: clippy_check.yml  coverage.yml  grcov.yml  release.yaml  rust.yml
cli/: Cargo.toml
core/: .metadata_v9_output.txt.swp  Cargo.toml  metadata_v9_output.txt
core/src/: decoder.rs  error.rs  lib.rs  metadata.hex  metadata.rs  regex.rs  substrate_types.rs  test_suite.rs  util.rs
core/src/decoder/: extrinsics.rs  metadata.rs  mod.rs  storage.rs
core/src/decoder/metadata/: test_suite.rs  version_07.rs  version_08.rs  version_09.rs  version_10.rs  version_11.rs  version_12.rs  version_13.rs
core/src/metadata/: test_suite.rs  version_07.rs  version_08.rs  version_09.rs  version_10.rs  version_11.rs  versions.rs
core/src/substrate_types/: data.rs  remote.rs
core/tests/: decoding.rs  test_suite.rs
core/tests/data/: v14_metadata_polkadot.scale
core_v14/: Cargo.toml
core_v14/src/: lib.rs  metadata.rs  substrate_type.rs  substrate_value.rs  util.rs  value.rs
core_v14/src/decoder/: decode_type.rs  decoder.rs  extrinsic_bytes.rs  mod.rs  utils.rs
core_v14/src/metadata/: metadata.rs  mod.rs  version_14.rs
core_v14/src/value/: deserialize.rs  deserializer.rs  mod.rs  serialize.rs
core_v14/tests/: decode_extrinsics.rs
core_v14/unused/: generic_extrinsic.rs  substrate_type.rs
core_v14/unused/substrate_value/: mod.rs  substrate_value.rs
desub/: Cargo.toml
desub-common/: Cargo.toml  README.md
desub-common/src/: lib.rs
desub-current/: Cargo.toml
desub-current/src/: lib.rs  type_id.rs
desub-current/src/decoder/: decode_storage.rs  decode_value.rs  extrinsic_bytes.rs  mod.rs
desub-current/src/metadata/: mod.rs  readonly_array.rs  u8_map.rs  version_14.rs
desub-current/src/value/: deserialize.rs  deserializer.rs  mod.rs  serialize.rs
desub-current/tests/: decode_extrinsics.rs  decode_storage.rs
desub-decode/: Cargo.toml  PLAN.md  README.md
desub-decode/src/: current.rs  decode.rs  legacy.rs  lib.rs  type_info.rs  visitor.rs
desub-decode/src/error/: context.rs  mod.rs
desub-decode/src/visitor/: decode.rs  mod.rs
desub-decode/src/visitor/types/: array.rs  bit_sequence.rs  composite.rs  mod.rs
desub-decode/src/visitor_types/: sequence.rs  str.rs  tuple.rs  variant.rs
desub-json-resolver/: Cargo.toml
desub-json-resolver/src/: extrinsics.rs  lib.rs  modules.rs  overrides.rs  resolver.rs
desub-json-resolver/src/definitions/: extrinsics.json  overrides.json
desub-legacy/: Cargo.toml
desub-legacy/src/: decoder.rs  error.rs  lib.rs  regex.rs  substrate_types.rs  test_suite.rs  util.rs
desub-legacy/src/decoder/: extrinsics.rs  metadata.rs  storage.rs
desub-legacy/src/decoder/metadata/: version_09.rs  version_11.rs  version_13.rs
desub-legacy/src/substrate_types/: data.rs  remote.rs
desub/src/: error.rs  lib.rs  types.rs
extras/: Cargo.toml
extras/src/: definitions.rs  error.rs  extrinsics.rs  lib.rs  modules.rs  overrides.rs  regex.rs  resolver.rs  runtimes.rs
extras/src/definitions/: definitions.json  extrinsics.json  overrides.json
extras/src/polkadot/: definitions.rs  extrinsics.rs  ksm5.0-6.3  mod.rs  overrides.rs
extras/src/polkadot/definitions/: definitions.json  overrides.json
extras/src/polkadot/dot_definitions/: README.md  definitions.json  extrinsics.json  overrides.json
extras/src/substrate_dev/: mod.rs
facade/: Cargo.toml
facade/src/: error.rs  lib.rs
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: metadata.rs  storage.rs
integration_tests/: Cargo.toml
integration_tests/tests/: extrinsics.rs  lib.rs  metadata.rs  runtime_metadata.rs  storage.rs  test_suite.rs
integration_tests/tests/test_suite/: runtime_metadata.rs
json-resolver/: Cargo.toml  README.md
json-resolver/src/: error.rs  extrinsics.rs  lib.rs  modules.rs  resolver.rs
legacy/: Cargo.toml
legacy/src/: lib.rs  substrate_types.rs
legacy/src/decoder/: metadata.rs
legacy/src/decoder/metadata/: version_12.rs
legacy/src/substrate_types/: remote.rs
src/: decoder.rs  error.rs  lib.rs  types.rs
substrate-metadata-versions/metadatav10/: Cargo.toml
substrate-metadata-versions/metadatav10/src/: lib.rs
substrate-metadata-versions/metadatav11/: Cargo.toml
substrate-metadata-versions/metadatav11/src/: lib.rs
substrate-metadata-versions/metadatav8/: Cargo.toml
substrate-metadata-versions/metadatav8/src/: lib.rs
substrate-metadata-versions/metadatav9/: Cargo.toml
substrate-metadata-versions/metadatav9/src/: lib.rs
substrate-metadata-versions/sp_core_versions/: README.md
substrate-metadata-versions/sp_core_versions/core-7314a/: Cargo.toml
substrate-metadata-versions/sp_core_versions/core-7314a/src/: ecdsa.rs  ed25519.rs  lib.rs
