[workspace]
members = [
	"desub-decode"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/desub"
homepage = "https://github.com/paritytech/desub"
description = "Decode substrate bytes, extrinsics and storage items"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
bitvec = { version = "1.0.1", default-features = false }
scale-decode = "0.9"
scale-info = "2.10"
scale-bits = { version = "0.4.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

desub-decode = { version = "0.1.0", default-features = false, path = "./desub-decode" }
