[package]
name = "desub-core"
version = "0.0.1"
authors = [ "Andrew Plaza <andrew.plaza@parity.io>" ]
edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1.0.22"
codec = { version = "1", package = "parity-scale-codec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
onig = { version = "5.0", default-features = false }
derive_more = "0.99.3"
dyn-clone = "1.0"
hex = "0.4"

runtime-version = { package = "sp-version", git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }
pallet-democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }
pallet-identity =  { package = "pallet-identity", git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }

primitives = { package = "sp-core",  git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }
runtime-primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }

runtime-metadata-latest = { package = "frame-metadata", git = "https://github.com/paritytech/substrate", rev = "a364e27d6e3971d756d28435efc468d95add52d3" }
runtime-metadata11 = { git = "https://github.com/insipx/substrate-metadata-versions", package = "frame-metadatav11", branch = "master" }
runtime-metadata10 = { git = "https://github.com/insipx/substrate-metadata-versions", package = "frame-metadatav10", branch = "master" }
runtime-metadata09 = { git = "https://github.com/insipx/substrate-metadata-versions", package = "frame-metadatav9", branch = "master" }
runtime-metadata08 = { git = "https://github.com/insipx/substrate-metadata-versions", package = "frame-metadatav8", branch = "master" }

[dev-dependencies]
pretty_env_logger = "0.4"
extras = { path = "../extras/", features = ["polkadot"], package = "desub-extras" }
hex = "0.4"
