[package]
name = "desub-core"
version = "0.0.1"
authors = [ "Andrew Plaza <andrew.plaza@parity.io>" ]
edition = "2018"
repository = "https://github.com/paritytech/desub"

[dependencies]
log = "0.4"
thiserror = "1.0.22"
codec = { version = "2", package = "parity-scale-codec", features = ["bit-vec"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
onig = { version = "5.0", default-features = false }
derive_more = "0.99.3"
dyn-clone = "1.0"
hex = "0.4"
bitvec = { version = "0.20.2", features = ["serde", "alloc"] }

pallet-democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
primitives = { package = "sp-core",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
runtime-primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
frame-metadata = { package = "frame-metadata", git = "https://github.com/paritytech/frame-metadata", branch = "insipx/add-legacy-metadata", features = ["legacy"] }

[dev-dependencies]
runtime-version = { package = "sp-version", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
pretty_env_logger = "0.4"
extras = { path = "../extras/", features = ["polkadot"], package = "desub-extras" }
hex = "0.4"

