[package]
name = "core_v14"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0.30"
sp_core = { package = "sp-core",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp_runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
frame-metadata = { version = "14.1", features = ["v14", "std", "scale-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
codec = { version = "2", package = "parity-scale-codec", features = ["bit-vec"] }
hex = "0.4.3"
derive_more = "0.99.16"
scale-info = { version = "1.0.0", features = ["bit-vec", "derive"] }
bitvec = { version = "0.20.2", features = ["serde", "alloc"] }

