[package]
name = "desub-current"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0.30"
frame-metadata = { workspace = true, features = ["std", "scale-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
hex = "0.4.3"
derive_more = "0.99.16"
scale-info = { workspace = true, features = ["bit-vec", "derive"] }
bitvec = { workspace = true, features = ["serde", "alloc"] }
desub-common = { version = "0.1.0", path = "../desub-common" }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
serde_json = "1"
sp-keyring = { workspace = true }
