[package]
name = "desub-current"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
frame-metadata = { workspace = true, features = ["std", "scale-info"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
hex = { workspace = true }
derive_more = { workspace = true }
scale-info = { workspace = true, features = ["bit-vec", "derive"] }
bitvec = { workspace = true, features = ["serde", "alloc"] }
desub-common = { workspace = true }
scale-value = { workspace = true }
scale-decode = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-keyring = { workspace = true }
