[package]
name = "desub-decode"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["current", "legacy"]

# Enable support for decoding types from scale-info PortableRegistry's,
# which are present in the newer metadata versions (V14+) provided with
# more recent runtimes.
current = ["dep:scale-info", "scale-bits/scale-info"]

# Enable support for decoding types used in older runtimes which rely
# on type mappings to understand how to decode bytes.
legacy = []

[dependencies]
scale-info = { workspace = true, optional = true }
scale-decode = { workspace = true }
scale-bits = { workspace = true }
derive_more = { workspace = true }
codec = { workspace = true }

[dev-dependencies]
scale-info = { workspace = true, features = ["derive"] }
bitvec = { workspace = true }
