[package]
name = "desub-json-resolver"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
thiserror = "1.0.30"
desub-legacy = { version = "0.1.0", path = "../desub-legacy" }
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1", features = ["parsing", "derive"] }
phf = { version = "0.10.0", features = [ "macros" ] }

[features]
default = ["default_definitions"]
polkadot = []
default_definitions = []
