[package]
name = "desub-json-resolver"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
thiserror = { workspace = true }
desub-legacy = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
syn = { workspace = true, features = ["parsing", "derive"] }
phf = { workspace = true, features = [ "macros" ] }

[features]
default = ["default_definitions"]
polkadot = []
default_definitions = []
