[package]
name = "desub-legacy"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
onig = { workspace = true, default-features = false }
derive_more = { workspace = true }
dyn-clone = { workspace = true }
hex = { workspace = true }
bitvec = { workspace = true, features = ["serde", "alloc"] }
frame-metadata = { workspace = true, features = ["legacy"] }
desub-common = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-version = { workspace = true }
pretty_env_logger = { workspace = true }
