[package]
name = "desub"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

desub-legacy = { version = "0.1.0", path = "../desub-legacy/" }
desub-common = { version = "0.1.0", path = "../desub-common/" }
desub-current = { version = "0.1.0", path = "../desub-current/" }
desub-json-resolver = { version = "0.1.0", path = "../desub-json-resolver/", optional = true }

thiserror = "1.0.30"
frame-metadata = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }

[features]
polkadot-js = ["desub-json-resolver", "desub-json-resolver/polkadot", "frame-metadata/legacy" ]
