[package]
name = "desub-extras"
version = "0.0.1"
authors = [ "Andrew Plaza <andrew.plaza@parity.io>" ]
edition = "2018"
repository = "https://github.com/paritytech/desub"


[dependencies]
thiserror = "1.0"
core = { path = "../core", package = "desub-core" }
codec = { version = "2", features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1", features = ["parsing", "derive"] }
phf = { version = "0.10.0", features = [ "macros" ] }

[features]
default = ["default_definitions"]
polkadot = []
default_definitions = []
