[package]
name = "facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

desub_legacy = { path = "../core/", package = "desub-core" }
core_v14 = { path = "../core_v14/", package = "core_v14" }
extras = { path = "../extras/", optional = true, package = "desub-extras" }
thiserror = "1.0.30"
frame-metadata = { git = "https://github.com/paritytech/frame-metadata", branch = "master" }

[features]
polkadot-js = ["extras", "extras/polkadot", "frame-metadata/legacy" ]
