[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/desub/"
description = "Decode Substrate with Backwards-Compatible Metadata"
readme = "README.md"
edition = "2021"
autotests = false

[dev-dependencies]
desub-legacy = { path = "../desub-legacy" }
desub-json-resolver = { path = "../desub-json-resolver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
codec = { version = "3.0", package = "parity-scale-codec" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }
pretty_env_logger = "0.4"
log = "0.4.17"
hex = "0.4"
paste = "1.0.3"
anyhow = "1"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24-1" }

[[test]]
name = "integration-tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = []
