[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false
publish = false

[dev-dependencies]
desub-legacy = { path = "../desub-legacy" }
desub-json-resolver = { path = "../desub-json-resolver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
parity-scale-codec = { workspace = true }
pallet-balances = { workspace = true }
pretty_env_logger = "0.4"
log = "0.4"
hex = "0.4"
paste = "1.0.3"
anyhow = "1"
frame-system = { workspace = true }
sp-core = { workspace = true }

[[test]]
name = "integration-tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = []
