[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false
publish = false

[dev-dependencies]
desub-legacy = { workspace = true }
desub-json-resolver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
parity-scale-codec = { workspace = true }
pallet-balances = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }

[[test]]
name = "integration-tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = []
