[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
desub-core = { path = "../core", package = "desub-core" }
extras = { path = "../extras", package = "desub-extras" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
codec = { version = "1", package = "parity-scale-codec" }
primitives = { package = "sp-core",  git = "https://github.com/paritytech/substrate", rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
pretty_env_logger = "0.4"
log = "0.4"
hex = "0.4"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = []
