[package]
name = "frame-metadatav10"
version = "10.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate" , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
sp-core = { version = "2.0.0-rc6", default-features = false,  git = "https://github.com/paritytech/substrate" , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"serde",
]
