[package]
name = "frame-metadatav11"
version = "11.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Decodable variant of the RuntimeMetadata."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate" , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"serde",
]
