[package]
name = "frame-metadatav9"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"primitives/std",
	"serde",
]
